Correction bug version tablette

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1677,6 +1677,16 @@
   .latest-trailer-content .default-btn {
     margin-left: 0px;
   }
+  #comciergerie{
+    height:auto;
+  }
+  #offre{
+    height:auto;
+    padding:50px 10px 10px 10px;
+  }
+  #prestations{
+    height:auto;
+  }
 }
 
 /* Min width 992px to Max width 1199px */
